--- a/index.html
+++ b/index.html
@@ -3,15 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning of Joel</title>
+    <title>Daarluh</title>
 </head>
+<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        font-family: 'Arial', sans-serif;
+        background-color: #f5f5f5;
+    }
+    .container {
+        text-align: center;
+    }
+    h1 {
+        font-size: 3em;
+        color: #ff1493;
+    }
+    p {
+        font-size: 1.5em;
+        color: #333;
+    }
+    .heart {
+        color: #ff1493;
+        font-size: 5em;
+    }
+</style>
 <body>
-    <!--This line is commented-->
-    <label for="name"> Name </label>
-    <input type="text" name="name" id="name">
-    <input type="button" value="print" onclick="window.print()">
-    <br>
-    <a href="https:\\127.0.0.1">Local</a>
+    <div class="container">
+        <h1>I Love You di Daarluh</h1>
+        <p class="heart">❤️</p>
+    </div>
     
 </body>
 </html>
